--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
                     <h4>Calendar</h4>
                     <label class="checkbox inline"><input id="calendar-enabled" type="checkbox" /> Enabled</label>
                   </div>
-                  <p class="hint">Board shows only the next upcoming event (time + course code).</p>
+                  <p class="hint">Board shows only the next upcoming event (time + program + course number).</p>
                   <label>
                     <span>Calendar Day</span>
                     <input id="calendar-day" type="date" />
@@ -237,8 +237,9 @@
 
               <div class="button-row">
                 <button id="valentine-fireworks" class="btn btn-secondary">Show Fireworks</button>
+                <button id="valentine-stop-fireworks" class="btn btn-ghost">Stop Fireworks</button>
               </div>
-              <p class="hint">Press once to add fireworks pixel art to this mode.</p>
+              <p class="hint">Use these buttons to start or stop the fireworks animation.</p>
             </section>
 
             <section id="tab-pixels" class="tab-panel">
