feat(clock): implement clock mode with auto-scheduling and brightness adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,7 @@
           <article class="card">
             <div class="tabs">
               <button class="tab is-active" data-tab="widgets">Widgets</button>
+              <button class="tab" data-tab="clock">Clock</button>
               <button class="tab" data-tab="message">Full Message</button>
               <button class="tab" data-tab="animation">Animation</button>
               <button class="tab" data-tab="valentine">Valentine Mode</button>
@@ -174,6 +175,12 @@
                   <button id="add-todo" class="btn btn-ghost">Add Task</button>
                 </article>
               </div>
+            </section>
+
+            <section id="tab-clock" class="tab-panel">
+              <h3>Clock Mode</h3>
+              <p class="card-help">Full-screen clock display. Night schedule auto-switches to clock at 22:00 with 40% brightness and returns to widgets at 11:00.</p>
+              <p class="hint">Click “Show Current Tab on Board” to push clock mode immediately.</p>
             </section>
 
             <section id="tab-message" class="tab-panel">
