feat(matrix): add RGB sequence option for customizable color mapping

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,18 @@
               <input id="pi-python" type="text" placeholder="python3" />
             </label>
 
+            <label>
+              <span>RGB Sequence</span>
+              <select id="pi-rgb-sequence">
+                <option value="RGB">RGB (Default)</option>
+                <option value="RBG">RBG</option>
+                <option value="GRB">GRB</option>
+                <option value="GBR">GBR</option>
+                <option value="BRG">BRG</option>
+                <option value="BGR">BGR</option>
+              </select>
+            </label>
+
             <label class="checkbox">
               <input id="pi-sudo" type="checkbox" />
               <span>Run renderer with sudo</span>
